<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:weightSum="1">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Krys Ragan, Software Developer"
            android:background="#190cff" android:textSize="15dp" android:textAlignment="center"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Check out my links!"
            android:id="@+id/textView2" android:layout_weight="0.53"
            android:textAlignment="center"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView9"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView3"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Support Site:"
            android:id="@+id/textView4" android:background="#a9a685"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:linksClickable="true"
            android:autoLink="web"
            android:text="@string/support"
            android:id="@+id/textViewsupport" android:textColor="#190cff" android:textIsSelectable="false"
            android:background="#9b9b9b" android:textAlignment="center"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView6"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Company Site:"
            android:id="@+id/textView7" android:background="#a9a685" android:autoText="true"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:autoLink="web"
            android:text="@string/company"
            android:id="@+id/textViewCompany" android:textColor="#190cff" android:singleLine="true"
            android:background="#9b9b9b" android:textAlignment="center"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView5"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Team Site:"
            android:id="@+id/textView8" android:background="#a9a685"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:autoLink="web"
            android:text="@string/team"
            android:id="@+id/textViewTeam" android:background="#9b9b9b" android:textColor="#190cff"
            android:linksClickable="false"/>
</LinearLayout>

